--- a/package.json
+++ b/package.json
@@ -2,16 +2,52 @@
   "name": "what-to-watch",
   "version": "1.0.0",
   "private": true,
-  "description": "Личный проект «Что посмотреть» от HTML Academy",
+  "description": "Что посмотреть",
   "scripts": {
-    "eslint": "eslint src/**/*.js",
-    "test": "npm run eslint"
+    "eslint": "eslint --ext .jsx --ext .js src/",
+    "test": "npm run eslint && npm run test.jest",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server",
+    "test.jest": "jest",
+    "simple.test": "npm run eslint"
   },
   "devDependencies": {
-    "eslint": "7.18.0",
-    "eslint-config-htmlacademy": "2.1.0"
+    "@babel/core": "7.8.7",
+    "@babel/preset-env": "7.8.7",
+    "@babel/preset-react": "7.8.3",
+    "axios-mock-adapter": "1.17.0",
+    "babel-loader": "8.1.0",
+    "css-loader": "5.0.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "eslint": "5.13.0",
+    "eslint-config-htmlacademy": "0.6.0",
+    "eslint-plugin-react": "7.21.2",
+    "file-loader": "6.1.1",
+    "jest": "25.1.0",
+    "leaflet": "1.7.1",
+    "moment": "2.29.1",
+    "react-leaflet": "2.7.0",
+    "react-test-renderer": "16.12.0",
+    "redux-devtools-extension": "2.13.8",
+    "reselect": "4.0.0",
+    "style-loader": "2.0.0",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.10.3"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": "10"
+  },
+  "dependencies": {
+    "axios": "0.19.2",
+    "lodash": "4.17.20",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "7.2.1",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   }
 }
