--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "0.19.2",
+    "component-will-mount-hook": "^1.0.2",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
     "react": "16.12.0",
